add elements in css

--- a/src/content/docs/fundamentals/101.md
+++ b/src/content/docs/fundamentals/101.md
@@ -5,11 +5,31 @@ description: description
 
 CSS stands for [cascading style sheet](https://developer.mozilla.org/en-US/docs/Web/CSS). CSS is the primary styling language of the web. This language is used to describe style of the HTML document.
 
+### Stylesheet
+
 _CSS is a style sheet language._ The order stylesheets are used grouped into three categories:
 
 - **User Agent Stylesheets:** This contains browser default styles for each element, this get the lowest precedence.
 - **User Stylesheets:** This contains preferences saved in browser, which override user agent stylesheet.
 - **Author stylesheets:** This is the code we write, these get highest precedence. (assuming !important has been not used).
+
+### Elements in CSS world
+
+In CSS world html elements are divided into two categories:
+
+**1. Replaced Elements:**
+
+> In CSS, a replaced element is an element whose representation is outside the scope of CSS; they're external objects whose representation is independent of the CSS formatting model. Put in simpler terms, they're elements whose contents are not affected by the current document's styles. The position of the replaced element can be affected using CSS, but not the contents of the replaced element itself. Some replaced elements, such as `<iframe>` elements, may have stylesheets of their own, but they don't inherit the styles of the parent document.
+>
+> \- [MDN](https://developer.mozilla.org/en-US/docs/Web/CSS/Replaced_element)
+
+Example of replaced elements: `<img>`,`<video>`,`<iframe>`,`<embed>` and `<fencedframe>`.
+
+**2. Nonreplaced elements:**
+
+In CSS, non-replaced elements are elements that do not have their intrinsic dimensions and do not rely on external resources to determine their size.
+
+Example of non-replaced elements: `<div>`,`<span>`,`<p>`,`<a>`,`<header>`,`<footer>`.
 
 ### See also
 
